--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,86 +1,86 @@
 @import "../../vars.css";
 
 .navbar {
-    position: sticky;
-    display: flex;
-    justify-content: space-between;
-    align-items: center; 
-    padding-top: 61px;
-    z-index: 5;
-    padding-left: 10%;
-    padding-right: 2%;
-    padding-bottom: 2%;
-    top: 0;
-    background: var(--color-background);
-    width: 100%; 
+  position: sticky;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 61px;
+  z-index: 5;
+  padding-left: 10%;
+  padding-right: 2%;
+  padding-bottom: 2%;
+  top: 0;
+  background: var(--color-background);
+  width: 100%;
 }
 
 .title {
-    font-size: 30px;
-    font-weight: 600;
-    text-decoration: none;
-    color: var(--color-text);
+  font-size: 30px;
+  font-weight: 600;
+  text-decoration: none;
+  color: var(--color-text);
 }
 
 .menuBtn {
-    display: none;
+  display: none;
 }
 
 .menu {
-    display: flex;
+  display: flex;
 }
 
 .menuItems {
-    display: flex;
-    gap: 47px;
-    list-style: none;
+  display: flex;
+  gap: 47px;
+  list-style: none;
 }
 
 .menuItems a {
-    font-size: 25px;
-    color: var(--color-text);
-    text-decoration: none;
+  font-size: 25px;
+  color: var(--color-text);
+  text-decoration: none;
 }
 
-@media screen and (max-width:830px) {
-    .navbar {
-        flex-direction: column;
-        align-items: flex-start;
-    }
+@media screen and (max-width: 830px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 
-    .menu {
-        position: absolute;
-        right: 0;
-        margin-right: 10%;
-        flex-direction: column;
-        align-items: flex-end;
-        gap: 11px;
-        z-index: 3;
-    }
+  .menu {
+    position: absolute;
+    right: 0;
+    margin-right: 10%;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 11px;
+    z-index: 3;
+  }
 
-    .menuBtn {
-        display: block;
-        cursor: pointer;
-    }
+  .menuBtn {
+    display: block;
+    cursor: pointer;
+  }
 
-    .menuItems {
-        display: none;
-        flex-direction: column;
-        align-items: center;
-        gap: 13px;
-        border-radius: 10px;
-        background: rgb(77, 25, 77);
-        background: linear-gradient(
-            0deg, 
-            rgba(77, 25, 77, 0.2) 0%, 
-            rgba(77, 25, 77, 1) 100%
-        );
-        padding: 24px 33px;
-        box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
-    }
+  .menuItems {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    gap: 13px;
+    border-radius: 10px;
+    background: rgb(1, 2, 45);
+    background: linear-gradient(
+      0deg,
+      rgba(1, 25, 103, 0.2) 0%,
+      rgb(0, 18, 89) 50%
+    );
+    padding: 24px 33px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
+  }
 
-    .menuOpen {
-        display: flex;
-        z-index: 1;
-    }
+  .menuOpen {
+    display: flex;
+    z-index: 1;
+  }
 }
