--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -75,12 +75,7 @@
   }
 
   .aboutImage {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    border-radius: 10px;
-    list-style: none;
-    padding: 0px;
+    display: none;
   }
 
   .aboutItems {
