--- a/src/components/giftDetails/GiftDetails.module.css
+++ b/src/components/giftDetails/GiftDetails.module.css
@@ -14,14 +14,18 @@
 }
 
 .popupContainer {
-  background-color: rgb(2, 6, 57);
-  color: var(--color-text);
+  background-color: rgb(255, 255, 255);
+  color: var(--color-text-dark);
   border-radius: 32px;
   box-shadow: 0 16px 16px rgba(0, 0, 0, 0.26);
-  width: 90%;
-  height: 90%;
+  width: 80%;
+  height: 80%;
   overflow: auto;
   position: relative;
+}
+
+.close {
+  fill: var(--color-text-dark);
 }
 
 .navbar {
@@ -69,25 +73,6 @@
   margin-bottom: 16px;
 }
 
-.technologies {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-bottom: 16px;
-  flex-wrap: wrap;
-  list-style: none;
-}
-
-.technology {
-  background-color: var(--color-secondary);
-  color: var(--color-text);
-  padding: 8px;
-  border-radius: 16px;
-  margin-right: 8px;
-  margin-bottom: 8px;
-  font-size: 24px;
-}
-
 .aboutContainer {
   margin-bottom: 16px;
   display: flex;
@@ -119,108 +104,6 @@
   margin-bottom: 1rem;
 }
 
-.tags {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 8px;
-  margin-bottom: 24px;
-  list-style: none;
-}
-
-.tag {
-  background-color: var(--color-secondary);
-  color: var(--color-text);
-  padding: 8px;
-  border-radius: 16px;
-  margin-right: 8px;
-  margin-bottom: 8px;
-  font-size: 24px;
-}
-
-.development {
-  font-size: 20px;
-  margin-bottom: 24px;
-}
-
-.development h3 {
-  font-size: 35px;
-  font-weight: 700;
-  letter-spacing: 1.5px;
-  text-transform: uppercase;
-  margin-bottom: 16px;
-}
-
-.linksContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  margin-bottom: 24px;
-}
-
-.linksContainer h3 {
-  font-size: 35px;
-  font-weight: 700;
-  letter-spacing: 1.5px;
-  text-transform: uppercase;
-  margin-bottom: 16px;
-}
-
-.linksContent {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 8px;
-  list-style: none;
-}
-
-.linksContent a {
-  background-color: var(--color-primary);
-  color: var(--color-text-dark);
-  padding: 8px;
-  border-radius: 16px;
-  margin-right: 8px;
-  margin-bottom: 8px;
-  font-size: 24px;
-  text-decoration: none;
-}
-
-.teamContainer {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 16px;
-}
-
-.teamContainer h3 {
-  font-size: 35px;
-  font-weight: 700;
-  letter-spacing: 1.5px;
-  text-transform: uppercase;
-  margin-bottom: 16px;
-}
-
-.teamContainer ul {
-  display: flex;
-  flex-direction: row;
-  list-style: none;
-  flex-wrap: wrap;
-  gap: 24px;
-}
-
-.teamMember {
-  background-color: var(--color-primary);
-  color: var(--color-text-dark);
-  padding: 8px;
-  border-radius: 16px;
-  font-size: 24px;
-  margin-right: -8px;
-}
-
-.teamMember a {
-  text-decoration: none;
-  color: var(--color-text-dark);
-}
-
 @media screen and (max-width: 830px) {
   .navbar {
     padding: 10px;
@@ -247,35 +130,7 @@
     height: 100%;
   }
 
-  .technology {
-    font-size: 20px;
-  }
-
   .aboutContainer h3 {
     font-size: 24px;
-  }
-
-  .tag {
-    font-size: 20px;
-  }
-
-  .development h3 {
-    font-size: 24px;
-  }
-
-  .linksContainer h3 {
-    font-size: 24px;
-  }
-
-  .linksContent a {
-    font-size: 20px;
-  }
-
-  .teamContainer h3 {
-    font-size: 24px;
-  }
-
-  .teamMember {
-    font-size: 20px;
   }
 }
