--- a/src/components/about/About.module.css
+++ b/src/components/about/About.module.css
@@ -35,7 +35,8 @@
   flex-direction: column;
   color: var(--color-text);
   gap: 48px;
-  padding-left: 10%;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .aboutItem {
@@ -51,14 +52,26 @@
   background-size: 100% 100%;
 }
 
+.phrase {
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  font-style: italic;
+  text-align: center;
+  margin-left: 6px;
+  margin-right: 6px;
+  font-size: 16px;
+}
+
 .aboutItem h3 {
-  font-size: 24px;
+  font-size: 20px;
   font-weight: 600;
   margin-bottom: 8px;
+  font-family: "Montserrat-Light", sans-serif;
 }
 
 .aboutItem p {
   font-size: 18px;
+  font-family: "Montserrat-Light", sans-serif;
 }
 
 .aboutItemText {
