--- a/src/components/evento/Evento.module.css
+++ b/src/components/evento/Evento.module.css
@@ -13,7 +13,8 @@
 .title {
   color: var(--color-text);
   font-size: 35px;
-  font-weight: 700;
+  font-weight: 500;
+  font-family: "Montserrat-Light", sans-serif;
   letter-spacing: 1.5px;
   text-transform: uppercase;
 }
@@ -33,21 +34,25 @@
   list-style: none;
   padding: 24px;
   margin-bottom: 16px;
+  font-family: "Montserrat-Light", sans-serif;
 }
 
 .eventoItem h3 {
   font-size: 24px;
   font-weight: 600;
   margin-bottom: 8px;
+  font-family: "Montserrat-Light", sans-serif;
 }
 
 .eventoItemDate {
   font-size: 16px;
+  font-family: "Montserrat-Light", sans-serif;
 }
 
 .eventoItemAddress {
   font-size: 20px;
   margin-top: 16px;
+  font-family: "Montserrat-Light", sans-serif;
 }
 
 @media screen and (max-width: 830px) {
