--- a/src/components/gifts/Gifts.module.css
+++ b/src/components/gifts/Gifts.module.css
@@ -12,10 +12,38 @@
 }
 
 .title {
+  color: var(--color-text);
   font-size: 35px;
-  font-weight: 600;
-  letter-spacing: 1.2px;
+  font-weight: 500;
+  font-family: "Montserrat-Light", sans-serif;
+  letter-spacing: 1.5px;
   text-transform: uppercase;
+}
+
+.description {
+  color: var(--color-text);
+  font-size: 18px;
+  font-weight: 100;
+  padding-top: 10px;
+  font-family: "Montserrat-Light", sans-serif;
+}
+
+.giftCard {
+  color: var(--color-text);
+  font-size: 18px;
+  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
+  word-wrap: break-word;
+  width: 100%;
+  max-width: 290px;
+}
+
+.value {
+  color: var(--color-text);
+  font-size: 16px;
+  margin-bottom: 10px;
+  font-weight: 100;
+  font-family: "Montserrat-Light", sans-serif;
 }
 
 .content {
@@ -25,64 +53,16 @@
   margin-bottom: 36px;
   list-style: none;
   flex-wrap: wrap;
-  gap: 16px;
-}
-
-.projectCard {
-  display: flex;
-  flex-direction: column;
-  border-radius: 16px;
-  padding: 16px;
-  margin-right: 16px;
-  margin-bottom: 16px;
-  max-width: 320px;
-  background: linear-gradient(
-    90deg,
-    rgba(12, 12, 12, 0.6) 0%,
-    rgba(12, 12, 12, 0.1) 100%
-  );
-  box-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
-  cursor: pointer;
+  gap: 12px;
 }
 
 .cardPicture {
   display: flex;
-  width: 100%;
   border-radius: 10px;
-  margin-bottom: 26px;
+  margin-bottom: 10px;
   align-items: center;
-}
-
-.projectCard h3 {
-  font-size: 24px;
-  font-weight: 700;
-  letter-spacing: 1.5px;
-  margin-bottom: 8px;
-}
-
-.projectCard p {
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 1.5;
-  margin-bottom: 16px;
-}
-
-.technologies {
-  width: 100%;
-  margin-top: 14px;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 6px;
-  list-style: none;
-}
-
-.technology {
-  font-size: 16px;
-  font-weight: 400;
-  border-radius: 80px;
-  background: var(--color-secondary);
-  padding: 2px 8px;
+  height: auto;
+  max-width: 300px;
 }
 
 @media screen and (max-width: 830px) {
@@ -94,9 +74,5 @@
   .content {
     margin-top: 24px;
     margin-bottom: 24px;
-  }
-
-  .projectCard {
-    margin-right: 0;
   }
 }
