--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,5 @@
   padding: 0;
   font-family: "Outfit", Arial, Helvetica, sans-serif;
 }
+
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
