--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,5 @@
 @import "./vars.css";
+@import url("https://fonts.googleapis.com/css?family=Montserrat");
 
 .App {
   background-color: var(--color-background);
