--- a/src/components/hero/Hero.module.css
+++ b/src/components/hero/Hero.module.css
@@ -20,21 +20,17 @@
 }
 
 .title {
-  font-size: 50px;
+  font-size: 44px;
   font-weight: 200;
   margin-bottom: 33px;
   font-family: "Montserrat-Light";
-  background: linear-gradient(
-    90deg,
-    rgba(255, 255, 255, 1) 70%,
-    rgba(255, 255, 255, 0) 120%
-  );
+  background: linear-gradient(90deg, #06123f 70%, #06123f 120%);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
 
 .description {
-  font-size: 30px;
+  font-size: 28px;
   font-family: "Montserrat-Light";
   margin-bottom: 52px;
 }
@@ -52,8 +48,21 @@
 }
 
 .heroImage {
-  width: 50%;
+  width: 70%;
   z-index: 1;
+}
+
+@media screen and (max-width: 1100px) {
+  .title {
+    margin-top: 25px;
+    font-size: 20px;
+    margin-bottom: 20px;
+  }
+
+  .description {
+    font-size: 20px;
+    margin-bottom: 15px;
+  }
 }
 
 @media screen and (max-width: 830px) {
@@ -66,12 +75,15 @@
   }
 
   .title {
-    font-size: 35px;
+    margin-top: 25px;
+    font-size: 25px;
+    margin-bottom: 20px;
     text-align: center;
   }
 
   .description {
-    font-size: 32px;
+    font-size: 20px;
     text-align: center;
+    margin-bottom: 15px;
   }
 }
