--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -5,13 +5,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 61px;
+  padding-top: 55px;
   z-index: 5;
   padding-left: 10%;
   padding-right: 2%;
   padding-bottom: 2%;
   top: 0;
-  background: var(--color-background);
+  background: #09375e;
   width: 100%;
 }
 
@@ -20,7 +20,9 @@
   font-weight: 500;
   font-family: "Montserrat-Light";
   text-decoration: none;
-  color: var(--color-text);
+  color: #fff;
+  white-space: nowrap;
+  margin-right: 10px;
 }
 
 .menuBtn {
@@ -33,16 +35,26 @@
 
 .menuItems {
   display: flex;
-  gap: 47px;
+  gap: 45px;
   list-style: none;
 }
 
 .menuItems a {
   font-size: 20px;
   font-weight: 100;
-  color: var(--color-text);
+  color: #fff;
   font-family: "Montserrat-Light";
   text-decoration: none;
+}
+
+@media screen and (max-width: 1100px) {
+  .menuItems a {
+    font-size: 18px;
+  }
+
+  .menuItems {
+    gap: 20px;
+  }
 }
 
 @media screen and (max-width: 830px) {
@@ -79,11 +91,6 @@
     gap: 13px;
     border-radius: 10px;
     background: rgb(25, 29, 77);
-    background: linear-gradient(
-      0deg,
-      rgba(25, 25, 77, 0.2) 0%,
-      rgb(25, 31, 77) 100%
-    );
     padding: 24px 33px;
     box-shadow: 0 0 4px rgba(0, 0, 0, 0.25);
   }
